# 3dmodelgen

./: .gitignore  CLAUDE.md  README.md  ai-image-to-3d-specification.md
.claude/: settings.local.json
.claude/agents/: blender-tech.md  ml-pipeline.md  quality-evaluator.md  ui-engineer.md
ai_models/: CLAUDE.md  README.md  pyproject.toml
ai_models/notebooks/: dev_gpu_server.ipynb
ai_models/src/m3d_ai/: __init__.py  idempotency.py  registry.py  registry.yaml  remote_server.py  settings.py
ai_models/src/m3d_ai/adapters/: base.py  mock.py  triposr.py
ai_models/tests/: conftest.py  test_remote_server.py
app/: .gitignore  CLAUDE.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
app/src/: App.tsx  index.css  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: README.md
app/src-tauri/src/: lib.rs  main.rs
app/src/components/: Dropzone.tsx  JobTimeline.tsx  ModelViewer.tsx  StatusBar.tsx
app/src/lib/: api.ts  schemas.ts  sse.ts  tauri-files.ts
app/src/stores/: job.ts
backend/: CLAUDE.md  README.md  pyproject.toml
backend/src/m3d_backend/: __init__.py  blender_runner.py
backend/src/m3d_backend/app/: deps.py  main.py  settings.py
backend/src/m3d_backend/app/routes/: artifacts.py  budget.py  events.py  jobs.py  system.py
backend/src/m3d_backend/db/: engine.py  models.py  repo.py
backend/src/m3d_backend/events/: bus.py  shapes.py
backend/src/m3d_backend/gpu/: base.py  mock.py  remote.py
backend/src/m3d_backend/pipeline/: artifacts.py  graph.py
backend/src/m3d_backend/pipeline/stages/: blender_cleanup.py  evaluate.py  export.py  generate.py  preprocess.py  refine.py  render_multiview.py
backend/src/m3d_backend/util/: ids.py  jsonio.py  paths.py
backend/tests/: conftest.py  test_remote_backend.py  test_smoke_pipeline.py
blender/: CLAUDE.md
blender/scripts/: _bpy_helpers.py  _template.py  cleanup.py
docs/: ARCHITECTURE.md  BACKEND_CONTRACT.md  BLENDER_OPERATIONS.md  DEV_RUNBOOK.md  PIPELINE.md  QUALITY_RUBRIC.md  RESUMABILITY_AND_BUDGET.md  ROADMAP.md
docs/DECISIONS/: ADR-0001-desktop-shell.md  ADR-0002-gpu-backend-abstraction.md  ADR-0003-initial-generator-choice.md  ADR-0004-python-runtime.md  ADR-0005-export-formats.md  ADR-0006-resumability-and-budget.md  README.md
