[project]
name = "m3d-ai"
version = "0.1.0"
description = "GPU adapters + remote FastAPI server. Imports torch only with optional extras."
requires-python = ">=3.10,<3.11"
authors = [{ name = "3dmodel_gen" }]
readme = "README.md"

# Base deps: enough to run the FastAPI server with mock adapter on any machine.
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    "pyyaml>=6,<7",
    "Pillow>=11,<12",
    "structlog>=24.4,<25",
]

[project.optional-dependencies]
# Installed on the GPU host (Colab / Modal / local CUDA box). NOT installed on the dev laptop.
torch = [
    "torch>=2.4",
    "torchvision>=0.19",
    "transformers>=4.45",
    "diffusers>=0.31",
    "accelerate>=1.1",
    "einops>=0.8",
    "huggingface_hub>=0.26",
    "trimesh>=4.5",
    "rembg>=2.0.59",
    "numpy>=1.26,<3",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/m3d_ai"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "ASYNC", "C4", "RET", "SIM", "PTH", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = ["error", "ignore::DeprecationWarning"]
