[project]
name = "m3d-backend"
version = "0.1.0"
description = "3dmodel_gen orchestrator: FastAPI + asyncio + SQLite + SSE. No torch."
requires-python = ">=3.10,<3.11"
authors = [{ name = "3dmodel_gen" }]
readme = "README.md"

dependencies = [
    # Web framework
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "sse-starlette>=2.1,<3",
    # Data models + settings
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    # Async + HTTP client (for remote GPU)
    "httpx>=0.27,<0.28",
    "anyio>=4.6,<5",
    "aiofiles>=24.1,<25",
    # Persistence
    "sqlalchemy[asyncio]>=2.0,<3",
    "aiosqlite>=0.20,<0.21",
    "alembic>=1.14,<2",
    # Resilience
    "tenacity>=9.0,<10",
    # Observability
    "structlog>=24.4,<25",
    # Image I/O + preprocessing. rembg is ONNX-only (no torch); fine in backend.
    "Pillow>=11,<12",
    "rembg>=2.0.59,<3",
    "onnxruntime>=1.19,<2",
    "numpy>=1.26,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<0.25",
    "pytest-cov>=6,<7",
    "ruff>=0.7,<0.8",
    "pyright>=1.1.385,<2",
    "trio>=0.27,<0.28",  # for asyncio testing alternative
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/m3d_backend"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",        # pycodestyle + pyflakes
    "I",                  # isort
    "B",                  # bugbear
    "UP",                 # pyupgrade
    "ASYNC",              # async pitfalls
    "S",                  # bandit (security)
    "A",                  # shadowing builtins
    "C4",                 # comprehensions
    "RET",                # return
    "SIM",                # simplify
    "PTH",                # use pathlib
    "PL",                 # pylint
    "RUF",                # ruff-specific
]
ignore = [
    "PLR0913",            # too many args (FastAPI deps + Pydantic models)
    "PLR2004",            # magic value comparison
    "S101",               # assert in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "PLR2004"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
include = ["src", "tests"]
strict = ["src"]
typeCheckingMode = "strict"
pythonVersion = "3.10"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:passlib.*",
]
